test/cases/parser/WrongType.errors
src/WrongType.b:3:12: Syntax error (expected type)
