test/cases/parser/WrongType.b
module WrongType
interface {
  const x: 123 = 100     // Error: "123" is not a type
